# Algol-like.Languages

./: README
ALGOL60/CInterpreter/taxi.1.0.Alpha.geographic.src/: LICENSE  README  custom.h  errors.h  taxi.1  taxi.c  taxi.h  taxi.vim
ALGOL60/CInterpreter/taxi.1.0.Alpha.geographic.src/docs/: makefile  taxi.man.roff
ALGOL60/CInterpreter/taxi.1.0.Alpha.geographic.src/samples/: gps.alg  integral.alg  integral_test.alg  jensen.alg  matmult.alg  mgps.alg  preci.alg  primes.alg  root.alg  sinint.alg  zeros.alg  (+2 more)
ALGOL60/MARST/marst-2.6/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  alglib1.c  alglib1.lo  alglib2.lo  alglib3.lo  config.status  configure  configure.ac  libalgol.la  libtool  macvt  macvt.c  marst  marst.c
ALGOL60/MARST/marst-2.6/.deps/: alglib1.Plo  alglib2.Plo  alglib3.Plo
ALGOL60/MARST/marst-2.6/.libs/: libalgol.lai  libalgol.so.0.0.0
ALGOL60/MARST/marst-2.6/doc/: marst.dvi  marst.ps  marst.texi
ALGOL60/MARST/marst-2.6/tests/: README
ALGOL60/Nase/a60-0.22a/: Makefile  a60  config.cache  config.status
OBERON/oberon-1.7.02/: root
OBERON_for.Linux/: README
S_Algol_and_PS_Algol/PS_ALGOL/: 7layer.sys  SEIVE.OUT  a86.com  acker.c  assemble.pas  bufdecls.pas  cgengen.pas  checkop.c  classtab.cmp  compile.pas  compiler.msg  control.pas  crtlib.c  dbtest.s  dir.pas  dlb.pas  edit_err.pas  editdecl.pas  editor.msg  editor.pas  enter.asm  env.pas  errors.pas  exec.c  exect.pas  filelib.c  filelib.s  fsm.pas  graphics.asm  graphics.c  idtypes.pas  iolib.8  iolib.asm  lexemes.def  link.c  link.h  linker.asm  main.c  mandel.s  mathlib.c  (+27 more)
(+8 files in other folders)
